<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="10dp"
    android:paddingLeft="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/nameDisplay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/name"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nameInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/phoneDisplay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/phoneNumber"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/phoneInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/paxDisplay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/groupPax"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/paxInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3">

                <TextView
                    android:id="@+id/textViewDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/day"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:ems="10"
                    android:hint="Click here to select day"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/time"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:ems="10"
                    android:hint="Click here to select time"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <TextView
                android:id="@+id/tableType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/tableArea"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="10dp">

                <RadioButton
                    android:id="@+id/areaOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/smokingArea" />

                <RadioButton
                    android:id="@+id/areaTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nonSmokingArea" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/confirmButton" />

                <Button
                    android:id="@+id/buttonReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/resetButton" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
